--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
 language: java
 jdk: openjdk13
 
-# install:
-#   - mettre une commmande si nécessaire
-
+os:
+  - linux
+  - osx
+  
+env :
+  matrix :
+    - TARGET : "lab1"
+    - TARGET : "lab2"
+    - TARGET : "lab3"
+    - TARGET : "lab4"
+    - TARGET : "lab5"
+    - TARGET : "lab6"
+    
 script:
-  - cd lab5
-  - mvn package 
+  - cd $LAB
+  - mvn package
